cluster/openhab/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openhab
  labels:
   app: openhab
spec:
  serviceName: openhab
  selector:
    matchLabels: 
      app: openhab
  replicas: 1
  template:
    metadata:
      labels:
        app: openhab
    spec:
#      hostNetwork: true
      nodeSelector:
             #feature.node.kubernetes.io/usb-02_0658_0200.present: "true"
        kubernetes.io/arch: amd64
        #node-role.kubernetes.io/worker: worker         
      containers:
      - name: openhab
        image: openhab/openhab:3.4.0.M4
        imagePullPolicy: Always
        securityContext:
          privileged: true
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 8101
          name: console
          protocol: TCP
        volumeMounts:
        - name: etc-localtime
          mountPath: /etc/localtime
          readOnly: true
        - name: openhab-conf
          mountPath: /openhab/conf
          readOnly: false
        - name: openhab-userdata
          mountPath: /openhab/userdata
          readOnly: false
        - name: openhab-addons
          mountPath: /openhab/addons
          readOnly: false
        - name: openhab-lib
          mountPath: /openhab/lib
          readOnly: false
        - name: openhab-java
          mountPath: /openhab/.java
          readOnly: false
        - name: openhab-karaf
          mountPath: /openhab/.karaf
          readOnly: false
        - name: zwave
          mountPath: /dev/zwave
#      initContainers:
#      - name: git-clone
#        image: alpine/git
#        args:
#        - clone
#        - --single-branch
#        - --
#        - https://github.com/larhauga/home.git
#        - /openhab/conf
#        volumeMounts:
#        - mountPath: /openhab/conf
#          name: openhab-conf
#          readOnly: false
      volumes:
      - name: etc-localtime
        hostPath:
          path: /usr/share/zoneinfo/Europe/Stockholm
      - name: openhab-conf
        hostPath:
          path: /etc/openhab-container
          type: Directory
        #persistentVolumeClaim:
        #  claimName: openhab-conf-claim
      - name: openhab-userdata
        #persistentVolumeClaim:
        #  claimName: openhab-userdata-claim
        hostPath:
          path: /var/lib/openhab-container
          type: Directory
      - name: openhab-addons
#        hostPath:
#          path: /openhab/addons
        persistentVolumeClaim:
          claimName: openhab-addons-claim
      - name: openhab-lib
        persistentVolumeClaim:
          claimName: openhab-lib-claim
#        hostPath:
#          path: /openhab/lib
      - name: openhab-java
        persistentVolumeClaim:
          claimName: openhab-java-claim
#        hostPath:
#          path: /openhab/.java
      - name: openhab-karaf
        persistentVolumeClaim:
          claimName: openhab-karaf-claim
      - name: zwave
        hostPath:
          path: /dev/zwave
#        hostPath:
#          path: /openhab/.karaf
      terminationGracePeriodSeconds: 300
